# Music-Recommendation-System

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  example.py  pyproject.toml
.github/workflows/: ci.yml
assets/: original_implementation.py
configs/: config.yaml
notebooks/: exploration.ipynb
scripts/: train.py
src/: __init__.py  data.py  evaluation.py  models.py  utils.py
tests/: test_music_recommendation.py
